| Summary: | ASTERISK-22799: CEL: Invalid cel.conf will fail to create Stasis topic, allowing for a crash if CELGenUserEvent attempts to publish to it | ||
| Reporter: | Matt Jordan (mjordan) | Labels: | |
| Date Opened: | 2013-10-31 16:04:21 | Date Closed: | 2013-11-15 08:37:01.000-0600 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_celgenuserevent CEL/General |
| Versions: | 12.0.0-beta1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | If an invalid CEL configuration is provided, Asterisk will disable CEL but still load. If it does so, it will fail to create the CEL Stasis topic - which means anyone who grabs the topic will just NULL.
This causes a crash in {{app_celgenuserevent}}, as it doesn't bother to check if the topic is NULL or not when it publishes the CEL user event. While we could check to see if the topic is NULL or not in that application, that doesn't stop anyone else who has written a dialplan application that upgrades it to 12 (all 0 of them) from also crashing. CEL should probably always create the topic on initialization and dispose of it on shutdown, just to be safe. | ||
| Comments: | |||